[gd_scene load_steps=20 format=3 uid="uid://drv5c6dwtd501"]

[ext_resource type="Script" path="res://Control.gd" id="1_v8t81"]
[ext_resource type="Texture2D" uid="uid://bx2atkp2s4sjt" path="res://fondoopaco.png" id="2_w76ps"]
[ext_resource type="Texture2D" uid="uid://caup8bj5gs2jb" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (7).png" id="3_6r8vy"]
[ext_resource type="Texture2D" uid="uid://chnbujdk77jn" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (9).png" id="4_h378s"]
[ext_resource type="Texture2D" uid="uid://6pivao2vqjam" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (8).png" id="5_jsleq"]
[ext_resource type="Texture2D" uid="uid://cgfabvmhfq10n" path="res://RECURSO DE VIDEO E IMAGENES/pixil-frame-0 (10).png" id="7_ebxnx"]
[ext_resource type="Texture2D" uid="uid://t1hubrnat15u" path="res://RECURSO DE VIDEO E IMAGENES/pixil-frame-0 (12).png" id="8_evq36"]
[ext_resource type="Texture2D" uid="uid://bpha7behckwbi" path="res://RECURSO DE VIDEO E IMAGENES/pixil-frame-0 (11).png" id="9_glujv"]
[ext_resource type="Texture2D" uid="uid://nsi7j8siorsv" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (4).png" id="9_oxut2"]
[ext_resource type="Texture2D" uid="uid://cmhxm7u64cm6b" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (5).png" id="10_bau4t"]
[ext_resource type="Texture2D" uid="uid://d2yjk2i08kilm" path="res://RECURSO DE VIDEO E IMAGENES/Large Buttons/pixil-frame-0 (6).png" id="11_rdnih"]

[sub_resource type="SystemFont" id="SystemFont_2qb63"]
font_names = PackedStringArray("Segoe UI")

[sub_resource type="LabelSettings" id="LabelSettings_8gt5q"]
font = SubResource("SystemFont_2qb63")
font_size = 40
font_color = Color(0, 0, 0, 1)
outline_size = 15
outline_color = Color(0.894118, 0, 0.898039, 1)

[sub_resource type="SystemFont" id="SystemFont_n7h4q"]
font_names = PackedStringArray("Segoe UI")

[sub_resource type="LabelSettings" id="LabelSettings_s1w88"]
font = SubResource("SystemFont_n7h4q")
font_size = 40
font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
outline_size = 15
outline_color = Color(0.772549, 0, 0.776471, 1)

[sub_resource type="SystemFont" id="SystemFont_hrcx0"]
font_names = PackedStringArray("Tahoma")

[sub_resource type="LabelSettings" id="LabelSettings_lxyep"]
font = SubResource("SystemFont_hrcx0")
font_size = 64
font_color = Color(0.0196078, 0.0196078, 0, 1)
outline_size = 23
outline_color = Color(0.184314, 0.494118, 1, 1)

[sub_resource type="SystemFont" id="SystemFont_tp8ar"]
font_names = PackedStringArray("Arial")

[sub_resource type="LabelSettings" id="LabelSettings_d3ixs"]
font = SubResource("SystemFont_tp8ar")
font_size = 30
font_color = Color(0.831373, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8t81")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 1146.0
offset_bottom = 653.0
texture = ExtResource("2_w76ps")

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.232
anchor_bottom = 0.794
offset_left = 282.0
offset_top = 298.0
offset_right = 247.128
offset_bottom = -165.482
text = "Contrase√±a:"
label_settings = SubResource("LabelSettings_8gt5q")

[node name="LineEdit" type="LineEdit" parent="NinePatchRect"]
layout_mode = 0
offset_left = 524.0
offset_top = 198.0
offset_right = 750.0
offset_bottom = 229.0

[node name="Label2" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 341.0
offset_top = 183.0
offset_right = 509.0
offset_bottom = 238.0
text = "Usuario:"
label_settings = SubResource("LabelSettings_s1w88")

[node name="LineEdit2" type="LineEdit" parent="NinePatchRect"]
layout_mode = 0
offset_left = 528.0
offset_top = 316.0
offset_right = 754.0
offset_bottom = 347.0

[node name="Label3" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.34
anchor_bottom = 0.28
offset_left = 496.0
offset_top = 55.0
offset_right = 361.36
offset_bottom = -39.84
text = "Login"
label_settings = SubResource("LabelSettings_lxyep")

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 473.0
offset_top = 383.0
offset_right = 713.0
offset_bottom = 511.0
texture_normal = ExtResource("3_6r8vy")
texture_pressed = ExtResource("4_h378s")
texture_hover = ExtResource("5_jsleq")

[node name="TextureButton2" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 28.0
offset_top = 530.0
offset_right = 247.0
offset_bottom = 621.0
texture_normal = ExtResource("7_ebxnx")
texture_pressed = ExtResource("8_evq36")
texture_hover = ExtResource("9_glujv")

[node name="TextureButton3" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 849.0
offset_top = 516.0
offset_right = 1089.0
offset_bottom = 644.0
texture_normal = ExtResource("9_oxut2")
texture_pressed = ExtResource("10_bau4t")
texture_hover = ExtResource("11_rdnih")

[node name="Label4" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_left = 430.0
offset_top = 525.0
offset_right = 765.0
offset_bottom = 571.0
label_settings = SubResource("LabelSettings_d3ixs")

[connection signal="pressed" from="NinePatchRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="NinePatchRect/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="NinePatchRect/TextureButton3" to="." method="_on_texture_button_3_pressed"]
